--- a/pages/historia.css
+++ b/pages/historia.css
@@ -1,17 +1,5 @@
-.texto1{
-    grid-area: texto1;
-}
 
-.texto2{
-    grid-area: texto2;
-}
-
-.texto3{
-    grid-area: texto3;
-}
-
-.corpoHistoria{
-    grid-area: corpoHistoria;
+.corpoHistoria{ 
     padding: 100px;
     margin-top: 20px;
 }
@@ -21,7 +9,6 @@
 }
 
 .cabecalhoGrid{
-    grid-area: cabecalhoGrid;
     display: grid;
     grid-template-columns:  1fr;
     grid-template-rows: 1fr;
@@ -31,12 +18,17 @@
 
 .titulo{
     grid-area: titulo;
-    font-size: 300%;
+    font-size: 500%;
     color: rgb(10, 18, 143);
     margin-left: 100px;
     margin-top: 20px;
     position: relative;
     transform: skew(-20deg);
+}
+
+.logo{
+    font-size: 70%;
+    margin-top: 30px;
 }
 
 .corpoCaminhao{
@@ -48,37 +40,18 @@
     margin-top: 20px;
 }
 
-.menuGrid{
-    grid-area: menuGrid;
-}
-
-.listaInicial{
-    list-style: none;
-    background-color: rgb(10, 18, 143);
-}
-
-.listaInicial li{
-    display: inline;
-    padding: 132px;
-}
-
-.listaInicial li a{
-    font-size: 120%;
-    text-decoration-line: none;
-    padding: 10px;
-    color: white;
-    display: inline-block;
+.navbar a{
     transition: background 0.5s;
 }
 
-.listaInicial li a:hover{
-    color:rgb(10, 18, 143);
+.navbar a:hover{
     background-color:white;
-    
+    color: rgb(10, 18, 143) !important;
 }
 
-.rodape{
-    grid-area: rodape;
+
+
+.rodape{  
     margin-top: 500px;
     padding: 100px;
     background-image: linear-gradient(to top, rgb(10, 18, 143) 95%, white);
@@ -96,46 +69,19 @@
     opacity: 0.5;
 }
 
-.historiaGrid{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 160px 100px 550px 1000px;
-    grid-template-areas: 
-    "cabecalhoGrid"
-    "menuGrid"
-    "corpoHistoria"
-    "rodape";
-}
-
 @media only screen and (max-width:768px){
-    .titulo{
-        grid-area: titulo;
-        font-size: 150%;
-        color: rgb(10, 18, 143);
-        margin-left: 50px;
-        margin-top: 20px;
-        position: relative;
-    }
-    .corpoHistoria{
-        grid-area: corpoHistoria;
-        padding: 50px;
-        width: 60%; 
-    }
-    .listaInicial li{
-        padding: 10px;
-    }
     .molas{
-        width: 0%;  
-    }
+        margin-top: 30px;
+        margin-bottom: 0;
+        padding-left: 0px;
+        opacity: 0.5;
+        width: 500px;
+    }  
 
-    .historiaGrid{
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 160px 100px 600px 1000px;
-        grid-template-areas: 
-        "cabecalhoGrid"
-        "menuGrid"
-        "corpoHistoria"
-        "rodape";
+    .corpoHistoria{
+        padding: 20px;
     }
 }
+
+
+
