--- a/pages/servicos.css
+++ b/pages/servicos.css
@@ -1,10 +1,8 @@
 .corpoServicos{
-    grid-area: corpoServicos;
     padding: 100px;
 }
 
 .cabecalhoGrid{
-    grid-area: cabecalhoGrid;
     display: grid;
     grid-template-columns:  1fr;
     grid-template-rows: 1fr;
@@ -14,12 +12,17 @@
 
 .titulo{
     grid-area: titulo;
-    font-size: 300%;
+    font-size: 500%;
     color: rgb(10, 18, 143);
     margin-left: 100px;
     margin-top: 20px;
     position: relative;
     transform: skew(-20deg);
+}
+
+.logo{
+    font-size: 70%;
+    margin-top: 30px;
 }
 
 .corpoCaminhao{
@@ -31,37 +34,16 @@
     margin-top: 20px;
 }
 
-.menuGrid{
-    grid-area: menuGrid;
-}
-
-.listaInicial{
-    list-style: none;
-    background-color: rgb(10, 18, 143);
-}
-
-.listaInicial li{
-    display: inline;
-    padding: 132px;
-}
-
-.listaInicial li a{
-    font-size: 120%;
-    text-decoration-line: none;
-    padding: 10px;
-    color: white;
-    display: inline-block;
+.navbar a{
     transition: background 0.5s;
 }
 
-.listaInicial li a:hover{
-    color:rgb(10, 18, 143);
+.navbar a:hover{
     background-color:white;
-    
+    color: rgb(10, 18, 143) !important;
 }
 
 .rodape{
-    grid-area: rodape;
     margin-top: 500px;
     padding: 100px;
     background-image: linear-gradient(to top, rgb(10, 18, 143) 95%, white);
@@ -77,39 +59,21 @@
     margin-bottom: 0;
     padding-left: 366px;
     opacity: 0.5;
-
 }
 
-.servicosGrid{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 160px 100px 300px 1000px;
-    grid-template-areas: 
-    "cabecalhoGrid"
-    "menuGrid"
-    "corpoServicos"
-    "rodape";
-}
+
+
 
 @media only screen and (max-width:768px){
-    .titulo{
-        grid-area: titulo;
-        font-size: 150%;
-        color: rgb(10, 18, 143);
-        margin-left: 50px;
-        margin-top: 20px;
-        position: relative;
-    }
-    .corpoServicos{
-        grid-area: corpoServicos;
-        padding: 50px;
-        width: 100%; 
-        
-    }
-    .listaInicial li{
-        padding: 10px;
-    }
     .molas{
-        width: 0%;  
+        margin-top: 30px;
+        margin-bottom: 0;
+        padding-left: 0px;
+        opacity: 0.5;
+        width: 500px;
+    }
+
+    .corpoServicos{
+        padding: 20px;
     }
 }
