--- a/pages/contato.css
+++ b/pages/contato.css
@@ -1,104 +1,104 @@
-.formulario{
-    padding-left:400px;
-    padding-right: 400px;
+* {
+  font-family: "Kdam Thmor Pro", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.campoFormulario{
-    border: solid;
-    background-color:azure;
-    padding-left: 10px;
+.formulario {
+  padding-left: 400px;
+  padding-right: 400px;
 }
 
-.corpoContato{
-    padding: 100px;
+.campoFormulario {
+  border: solid;
+  background-color: azure;
+  padding-left: 10px;
 }
 
-.cabecalhoGrid{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas: 
-    "titulo caminhao";
+.corpoContato {
+  padding: 100px;
 }
 
-.titulo{
-    grid-area: titulo;
-    font-size: 500%;
-    color: rgb(10, 18, 143);
-    margin-left: 100px;
-    margin-top: 20px;
-    position: relative;
-    transform: skew(-20deg);
+.cabecalhoGrid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "titulo caminhao";
 }
 
-.logo{
-    font-size: 70%;
+.titulo {
+  grid-area: titulo;
+  font-size: 500%;
+  color: rgb(10, 18, 143);
+  margin-left: 100px;
+  margin-top: 20px;
+  position: relative;
+  transform: skew(-20deg);
+}
+
+.logo {
+  font-size: 70%;
+  margin-top: 30px;
+}
+
+.corpoCaminhao {
+  grid-area: caminhao;
+}
+
+.caminhao {
+  height: 140px;
+  margin-top: 20px;
+}
+
+.navbar a {
+  transition: background 0.5s;
+}
+.navbar a:hover {
+  background-color: white;
+  color: rgb(10, 18, 143) !important;
+}
+
+.rodape {
+  margin-top: 500px;
+  padding: 100px;
+  background-image: linear-gradient(to top, rgb(10, 18, 143) 95%, white);
+  color: white;
+}
+.rodape a {
+  color: white;
+}
+.rodape a:hover {
+  color: white;
+}
+
+.molas {
+  margin-top: 100px;
+  margin-bottom: 0;
+  padding-left: 366px;
+  opacity: 0.5;
+}
+
+@media only screen and (max-width: 1400px) {
+  .molas {
     margin-top: 30px;
-}
-
-.corpoCaminhao{
-    grid-area: caminhao;
-}
-
-.caminhao{
-    height: 140px;
-    margin-top: 20px;
-}
-
-.navbar a{
-    transition: background 0.5s;
-}
-
-.navbar a:hover{
-    background-color:white;
-    color: rgb(10, 18, 143) !important;
-}
-
-.rodape{
-    margin-top: 500px;
-    padding: 100px;
-    background-image: linear-gradient(to top, rgb(10, 18, 143) 95%, white);
-    color: white;
-}
-
-.rodape a{
-    color: white;
-}
-
-.molas{
-    margin-top: 100px;
     margin-bottom: 0;
-    padding-left: 366px;
+    padding-left: 10px;
     opacity: 0.5;
+    width: 500px;
+  }
+  .formulario {
+    padding-left: 30px;
+  }
+  .campoFormulario {
+    border: solid;
+    background-color: azure;
+    padding-left: 10px;
+    width: 500px;
+  }
+  .corpoContato {
+    padding: 20px;
+  }
 }
 
-@media only screen and (max-width:1400px){
-    .molas{
-        margin-top: 30px;
-        margin-bottom: 0;
-        padding-left: 10px;
-        opacity: 0.5;
-        width: 500px;
-    }  
-
-    .formulario{
-        padding-left:30px;   
-    }
-    
-    .campoFormulario{
-        border: solid;
-        background-color:azure;
-        padding-left: 10px;
-        width: 500px;
-    }
-
-    .corpoContato{
-        padding: 20px;
-    }
-    
-}
-
-
-
-
-
+/*# sourceMappingURL=contato.css.map */
