--- a/pages/style.css
+++ b/pages/style.css
@@ -1,23 +1,8 @@
-
-*{
-    font-family: 'Kdam Thmor Pro', sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;  
+* {
+  font-family: "Kdam Thmor Pro", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*# sourceMappingURL=style.css.map */
