--- a/pages/style.scss
+++ b/pages/style.scss
@@ -12,7 +12,14 @@ $Branco: white;
 
 $AzulClaro: azure;
 
-
+$estiloTitulo:(
+    cor: $AzulMarinho,
+    TFonte: 500%,
+    Posicao: relative,
+    Transformacao: skew(-20deg),
+    MargemEsquerda: 100px,
+    MargemCima: 20px,
+)
 
 
 
